fix the canvas overflow, change display:grid and place-items:center to display:flex; align-items:center; justify-content:center;. now that bug is fixed

--- a/index.css
+++ b/index.css
@@ -51,8 +51,9 @@ main{
 
 
 .canvas-section{
-    display:grid;
-    place-items:center;
+    display:flex;
+    align-items:center;
+    justify-content:center;
     height:80%;
 }
 
